src/test/ui/issues/issue-41229-ref-str.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-41229-ref-str.rs:11:28
   |
LL | pub fn example(ref s: str) {}
   |                            ^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `str`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
